--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,20 @@
-body {background:red}
+article, footer, header, section{
+    
+    display: block;   
+}
+article, footer, header, section{
+    
+    background: #fff;
+    font-size: 16px;
+    margin: 0.1em auto;
+    padding: 0.5em;
+    text-align: center;
+    border-radius: 0.5em;
+    -webkit-border-radius: 0.5em;
+    -moz-border-radius: 0.5em;
+    -o-border-radius: 0.5em;
+    
+}
+header h1{
+        font-size: 20px;
+}
