Agreque Link a CSS y JS

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ article, footer, header, section{
 }
 article, footer, header, section{
     
-    background: #fff;
+    background: #ccc;
     font-size: 16px;
     margin: 0.1em auto;
     padding: 0.5em;
